--- a/Apropos.html
+++ b/Apropos.html
@@ -35,3 +35,25 @@
             </div>
         </div>
     </footer>
+    <!-- Popup inscription -->
+    <div id="popupInscription" class="modal">
+        <div class="modal-content">
+            <button class="close">&times;</button>
+            <h2>Rejoindre la communauté</h2>
+            <form id="formInscription">
+                <label>Nom :</label>
+                <input type="text" id="nom" required>
+
+                <label>Prénom :</label>
+                <input type="text" id="prenom" required>
+
+                <label>Adresse email :</label>
+                <input type="email" id="email" required>
+
+                <button type="submit" class="submit-btn">S'inscrire</button>
+            </form>
+        </div>
+    </div>
+        <script src="js/Page.js" defer></script>
+</body>
+</html>
