--- a/Contact.html
+++ b/Contact.html
@@ -7,21 +7,39 @@
 </head>
 <body>
     <div>
-    <nav class="topnav">
-        <a class="active" href="#home">Menu</a>
-        <a href="#about">À propos</a>
-        <a href="Page.html">Recherche</a>
+        <nav class="topnav">
+            <a class="active" href="#home">Menu</a>
+            <a href="Apropos.html">À propos</a>
+            <a href="Page.html">Recherche</a>
+        </nav>
     </div>
-    <h1 class="titre-principal">Contactez-nous</h1>
 
-    <h3 class="texte-contact">Nous serions ravis de vous aider ou de répondre à vos questions.</p>
-    <p><strong>Email :</strong> contact@bookmovie.com</p>
-    <p><strong>Téléphone :</strong> +33 7 69 29 06 39</p>
-    <p><strong>Adresse :</strong> 120 Rue de Verdin, 92800 Puteaux, France</p>
-    <img src="image/map.jpg"
-    alt="localisation">
-    
-    </p>
+    <h1 class="titre-principal">Contactez-nous</h1>
+    <h3 class="texte-contact">Nous serions ravis de vous aider ou de répondre à vos questions.</h3>
+    <p class="texte-contact"><strong>Email :</strong> contact@bookmovie.com</p>
+    <p class="texte-contact"><strong>Téléphone :</strong> +33 7 69 29 06 39</p>
+    <p class="texte-contact"><strong>Adresse :</strong> 120 Rue de Verdin, 92800 Puteaux, France</p>
+    <h1 class=" texte-contact">Voilà un formulaire pour nous envoyer un message !</h1>
+
+    <div id="successMsg" style="display:none; color: green; text-align:center; margin-top:20px;">
+        Message bien envoyé !
+    </div>
+
+    <div>
+        <form class="contactForm">
+            <label>Nom :</label>
+            <input type="text" name="nom" required>
+
+            <label>Email :</label>
+            <input type="email" name="email" required>
+
+            <label>Message :</label>
+            <textarea name="message" required></textarea>
+
+            <button type="submit">Envoyer</button>
+        </form>
+    </div>
+
     <footer class="footer">
         <div class="footer-container">
             <div class="footer-col logo-col">
@@ -43,6 +61,27 @@
             </div>
         </div>
     </footer>
+
+    <!-- Popup inscription -->
+    <div id="popupInscription" class="modal">
+        <div class="modal-content">
+            <button class="close">&times;</button>
+            <h2>Rejoindre la communauté</h2>
+            <form id="formInscription">
+                <label>Nom :</label>
+                <input type="text" id="nom" required>
+
+                <label>Prénom :</label>
+                <input type="text" id="prenom" required>
+
+                <label>Adresse email :</label>
+                <input type="email" id="email" required>
+
+                <button type="submit" class="submit-btn">S'inscrire</button>
+            </form>
+        </div>
+    </div>
+
     <script src="js/Page.js" defer></script>
 </body>
 </html>
