commit du fin de projet

--- a/Acceuil.html
+++ b/Acceuil.html
@@ -65,7 +65,7 @@
       } );
     </script>
     
-<section id="fun-fact-section">
+<section id="citation">
     <h3>Citation littéraire</h3>
     <div id="quote-box">
         <p id="fact-text"></p>
