Modif barre de menu

--- a/Contact.html
+++ b/Contact.html
@@ -7,11 +7,12 @@
 </head>
 <body>
     <div>
-        <nav class="topnav">
-            <a class="active" href="#home">Menu</a>
-            <a href="Apropos.html">À propos</a>
-            <a href="Page.html">Recherche</a>
-        </nav>
+           <!-- Barre de menu -->
+    <nav class="topnav">
+        <a class="active" href="#home">Menu</a>
+        <a href="Apropos.html">À propos</a>
+        <a href="Contact.html">Contact</a>
+        <a href="Page.html">Recherches</a>
     </div>
 
     <h1 class="titre-principal">Contactez-nous</h1>
@@ -50,11 +51,11 @@
                 <h3>Les bases</h3>
                 <a href="Apropos.html">À propos</a>
                 <a href="#">Contact</a>
-                <a href="#">API Documentation</a>
+                <a href="api.html">API Documentation</a>
             </div>
             <div class="footer-col">
                 <h3>Mentions légales</h3>
-                <a href="#">Conditions d’utilisation</a>
+                <a href="condition.html">Conditions d’utilisation</a>
                 <a href="#">Confidentialité</a>
                 <a href="#">API – Conditions</a>
                 <a href="#">Politiques de droits</a>
