--- a/Page.html
+++ b/Page.html
@@ -14,6 +14,7 @@
         <a class="active" href="#home">Menu</a>
         <a href="Apropos.html">À propos</a>
         <a href="Contact.html">Contact</a>
+        <a href="Page.html">Recherches</a>
 
         <div class="search-container">
             <input type="text" placeholder="Rechercher un livre..." id="searchInput">
@@ -69,13 +70,13 @@
             </div>
             <div class="footer-col">
                 <h3>Les bases</h3>
-                <a href="#">À propos</a>
+                <a href="Apropos.html">À propos</a>
                 <a href="Contact.html">Contact</a>
-                <a href="#">API Documentation</a>
+                <a href="api.html">API Documentation</a>
             </div>
             <div class="footer-col">
                 <h3>Mentions légales</h3>
-                <a href="#">Conditions d’utilisation</a>
+                <a href="condition.html">Conditions d’utilisation</a>
                 <a href="#">Confidentialité</a>
                 <a href="#">API – Conditions</a>
                 <a href="#">Politiques de droits</a>
