--- a/Apropos.html
+++ b/Apropos.html
@@ -7,10 +7,12 @@
 </head>
 <body>
     <div>
+     <!-- Barre de menu -->
     <nav class="topnav">
         <a class="active" href="#home">Menu</a>
-        <a href="Page.html">Recherche</a>
+        <a href="Apropos.html">À propos</a>
         <a href="Contact.html">Contact</a>
+        <a href="Page.html">Recherches</a>
     </div>
     <h1 class="titre-principal">En savoir plus sur notre projet</h1>
 
