Amélioration des connexions entre pages

--- a/Page.html
+++ b/Page.html
@@ -14,8 +14,7 @@
         <a class="active" href="#home">Menu</a>
         <a href="Apropos.html">À propos</a>
         <a href="Contact.html">Contact</a>
-        <a href="Page.html">Recherches</a>
-
+        <a href="Page.html">Rechercher</a>
         <div class="search-container">
             <input type="text" placeholder="Rechercher un livre..." id="searchInput">
             <button type="button" id="searchBtn">Rechercher</button>
@@ -72,13 +71,13 @@
                 <h3>Les bases</h3>
                 <a href="Apropos.html">À propos</a>
                 <a href="Contact.html">Contact</a>
-                <a href="api.html">API Documentation</a>
+                <a href="apidoc.html">API Documentation</a>
             </div>
             <div class="footer-col">
                 <h3>Mentions légales</h3>
                 <a href="condition.html">Conditions d’utilisation</a>
-                <a href="#">Confidentialité</a>
-                <a href="#">API – Conditions</a>
+                <a href="confidentialitées.html">Confidentialité</a>
+                <a href="apicond.html">API – Conditions</a>
                 <a href="#">Politiques de droits</a>
             </div>
         </div>
