--- a/Contact.html
+++ b/Contact.html
@@ -12,7 +12,7 @@
         <a class="active" href="#home">Menu</a>
         <a href="Apropos.html">À propos</a>
         <a href="Contact.html">Contact</a>
-        <a href="Page.html">Recherches</a>
+        <a href="Page.html">Rechercher</a>
     </div>
 
     <h1 class="titre-principal">Contactez-nous</h1>
@@ -51,13 +51,13 @@
                 <h3>Les bases</h3>
                 <a href="Apropos.html">À propos</a>
                 <a href="#">Contact</a>
-                <a href="api.html">API Documentation</a>
+                <a href="apidoc.html">API Documentation</a>
             </div>
             <div class="footer-col">
                 <h3>Mentions légales</h3>
                 <a href="condition.html">Conditions d’utilisation</a>
-                <a href="#">Confidentialité</a>
-                <a href="#">API – Conditions</a>
+                <a href="confidentialitées.html">Confidentialité</a>
+                <a href="apicond.html">API – Conditions</a>
                 <a href="#">Politiques de droits</a>
             </div>
         </div>
