Modif bouton plus logo

--- a/apicond.html
+++ b/apicond.html
@@ -43,7 +43,7 @@
     <footer class="footer">
         <div class="footer-container">
             <div class="footer-col logo-col">
-                <img src="image/logobm.jpg" alt="Logo BookMovie" class="footer-logo">
+                <img src="image/logobf.png" alt="Logo BookFinder" class="footer-logo">
                 <button class="join-btn">Rejoindre la communauté</button>
             </div>
             <div class="footer-col">
@@ -57,7 +57,6 @@
                 <a href="condition.html">Conditions d’utilisation</a>
                 <a href="confidentialitées.html">Confidentialité</a>
                 <a href="apicond.html">API – Conditions</a>
-                <a href="">Politiques de droits</a>
             </div>
         </div>
 
