--- a/Apropos.html
+++ b/Apropos.html
@@ -19,7 +19,7 @@
      <footer class="footer">
         <div class="footer-container">
             <div class="footer-col logo-col">
-                <img src="image/logobm.jpg" alt="Logo BookMovie" class="footer-logo">
+                <img src="image/logobf.png" alt="Logo BookFinder" class="footer-logo">
                 <button class="join-btn">Rejoindre la communauté</button>
             </div>
             <div class="footer-col">
@@ -32,8 +32,7 @@
                 <h3>Mentions légales</h3>
                 <a href="condition.html">Conditions d’utilisation</a>
                 <a href="confidentialitées.html">Confidentialité</a>
-                <a href="#">API – Conditions</a>
-                <a href="#">Politiques de droits</a>
+               
             </div>
         </div>
     </footer>
