--- a/apidoc.html
+++ b/apidoc.html
@@ -71,7 +71,7 @@ fetch('https://openlibrary.org/search.json?q=harry+potter&limit=5')
     <footer class="footer">
         <div class="footer-container">
             <div class="footer-col logo-col">
-                <img src="image/logobm.jpg" alt="Logo BookMovie" class="footer-logo">
+                <img src="image/logobf.png" alt="Logo BookFinder" class="footer-logo">
                 <button class="join-btn">Rejoindre la communauté</button>
             </div>
             <div class="footer-col">
@@ -85,7 +85,7 @@ fetch('https://openlibrary.org/search.json?q=harry+potter&limit=5')
                 <a href="condition.html">Conditions d’utilisation</a>
                 <a href="confidentialitées.html">Confidentialité</a>
                 <a href="apicond.html">API – Conditions</a>
-                <a href="#">Politiques de droits</a>
+                
             </div>
         </div>
     </footer>
