--- a/Contact.html
+++ b/Contact.html
@@ -13,11 +13,12 @@
         <a href="Apropos.html">À propos</a>
         <a href="Contact.html">Contact</a>
         <a href="Page.html">Rechercher</a>
+        <a href="#">Bibliothèques</a>
     </div>
 
     <h1 class="titre-principal">Contactez-nous</h1>
     <h3 class="texte-contact">Nous serions ravis de vous aider ou de répondre à vos questions.</h3>
-    <p class="texte-contact"><strong>Email :</strong> contact@bookmovie.com</p>
+    <p class="texte-contact"><strong>Email :</strong> contact@bookfinder.com</p>
     <p class="texte-contact"><strong>Téléphone :</strong> +33 7 69 29 06 39</p>
     <p class="texte-contact"><strong>Adresse :</strong> 120 Rue de Verdin, 92800 Puteaux, France</p>
     <h1 class=" texte-contact">Voilà un formulaire pour nous envoyer un message !</h1>
