--- a/condition.html
+++ b/condition.html
@@ -13,37 +13,38 @@
         <a href="Apropos.html">À propos</a>
         <a href="Contact.html">Contact</a>
         <a href="Page.html">Rechercher</a>
+        <a href="#">Bibliothèques</a>
     </nav>
     <div>
         <section id="conditions-utilisation" style="max-width:800px; margin:40px auto; padding:20px; background:#f9f9f9; border-radius:12px; box-shadow:0 4px 12px rgba(0,0,0,0.1); font-family: 'Roboto', sans-serif;">
-    <h2 style="text-align:center; color:#1C4412; margin-bottom:20px;">Conditions d’Utilisation – BoookMovie</h2>
+    <h2 style="text-align:center; color:#1C4412; margin-bottom:20px;">Conditions d’Utilisation – BookFinder</h2>
 
     <h3>1. Acceptation des conditions</h3>
-    <p>En accédant et en utilisant le site <strong>BoookMovie</strong>, vous acceptez de respecter les présentes conditions d’utilisation. Si vous n’acceptez pas ces conditions, veuillez ne pas utiliser le site.</p>
+    <p>En accédant et en utilisant le site <strong>BookFinder</strong>, vous acceptez de respecter les présentes conditions d’utilisation. Si vous n’acceptez pas ces conditions, veuillez ne pas utiliser le site.</p>
 
     <h3>2. Accès au site</h3>
-    <p>BoookMovie s’efforce de maintenir le site disponible en permanence, mais nous ne garantissons pas un accès ininterrompu ou exempt d’erreurs. Le site peut être suspendu pour maintenance ou mise à jour sans préavis.</p>
+    <p>BookFinder s’efforce de maintenir le site disponible en permanence, mais nous ne garantissons pas un accès ininterrompu ou exempt d’erreurs. Le site peut être suspendu pour maintenance ou mise à jour sans préavis.</p>
 
     <h3>3. Propriété intellectuelle</h3>
-    <p>Tout le contenu présent sur BoookMovie, y compris textes, images, logos, vidéos et graphismes, est protégé par le droit d’auteur et appartient à BoookMovie ou à ses partenaires. Toute reproduction, distribution ou modification sans autorisation est interdite.</p>
+    <p>Tout le contenu présent sur BookFinder, y compris textes, images, logos, vidéos et graphismes, est protégé par le droit d’auteur et appartient à BookFinder ou à ses partenaires. Toute reproduction, distribution ou modification sans autorisation est interdite.</p>
 
     <h3>4. Utilisation du site</h3>
-    <p>Vous vous engagez à utiliser BoookMovie uniquement à des fins légales et à ne pas l’exploiter de manière pouvant nuire au site ou à ses utilisateurs.</p>
+    <p>Vous vous engagez à utiliser BookFinder uniquement à des fins légales et à ne pas l’exploiter de manière pouvant nuire au site ou à ses utilisateurs.</p>
 
     <h3>5. Contenu des utilisateurs</h3>
-    <p>Si vous créez un compte et soumettez du contenu (commentaires, avis, etc.), vous garantissez que vous possédez les droits sur ce contenu et autorisez BoookMovie à l’utiliser sur le site. Le contenu doit rester respectueux et conforme à la loi.</p>
+    <p>Si vous créez un compte et soumettez du contenu (commentaires, avis, etc.), vous garantissez que vous possédez les droits sur ce contenu et autorisez BookFinder à l’utiliser sur le site. Le contenu doit rester respectueux et conforme à la loi.</p>
 
     <h3>6. Liens vers d’autres sites</h3>
-    <p>BoookMovie peut contenir des liens vers d’autres sites web. Nous ne sommes pas responsables du contenu ou des pratiques de confidentialité de ces sites externes.</p>
+    <p>BookFinder peut contenir des liens vers d’autres sites web. Nous ne sommes pas responsables du contenu ou des pratiques de confidentialité de ces sites externes.</p>
 
     <h3>7. Protection des données</h3>
-    <p>Les informations que vous fournissez sur BoookMovie sont traitées conformément à notre <a href="confidentialitées.html" style="color:#038e5d; text-decoration:underline;">politique de confidentialité</a>. Veuillez la consulter attentivement.</p>
+    <p>Les informations que vous fournissez sur BookFinder sont traitées conformément à notre <a href="confidentialitées.html" style="color:#038e5d; text-decoration:underline;">politique de confidentialité</a>. Veuillez la consulter attentivement.</p>
 
     <h3>8. Modifications des conditions</h3>
-    <p>BoookMovie se réserve le droit de modifier ces conditions à tout moment. Les modifications prendront effet dès leur publication sur le site. Il est recommandé de consulter régulièrement cette page.</p>
+    <p>BookFinder se réserve le droit de modifier ces conditions à tout moment. Les modifications prendront effet dès leur publication sur le site. Il est recommandé de consulter régulièrement cette page.</p>
 
     <h3>9. Limitation de responsabilité</h3>
-    <p>BoookMovie ne pourra être tenu responsable des dommages directs ou indirects liés à l’utilisation du site, y compris l’interruption de service, la perte de données ou toute autre conséquence.</p>
+    <p>BookFinder ne pourra être tenu responsable des dommages directs ou indirects liés à l’utilisation du site, y compris l’interruption de service, la perte de données ou toute autre conséquence.</p>
 
     <h3>10. Droit applicable</h3>
     <p>Ces conditions sont régies par le droit Français. Tout litige sera soumis aux tribunaux compétents de France.</p>
@@ -62,6 +63,7 @@
                 <a href="Apropos.html">À propos</a>
                 <a href="Contact.html">Contact</a>
                 <a href="api.html">API Documentation</a>
+                <a href="#">Bibliothèques</a>
             </div>
             <div class="footer-col">
                 <h3>Mentions légales</h3>
