--- a/apicond.html
+++ b/apicond.html
@@ -13,6 +13,7 @@
         <a href="Apropos.html">À propos</a>
         <a href="Contact.html">Contact</a>
         <a href="Page.html">Rechercher</a>
+        <a href="#">Bibliothèques</a>
     </nav>
 
     <div>
